<resources>
    <string name="app_name">RB HYHO</string>
    <string name="prompt_userid">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="data_uploaded_successfully">Database Uploaded Successfully</string>
    <string name="database_not_uploaded">Database Not Uploaded</string>
    <string name="errordatabase_not_uploaded">Error in Database Uploading</string>
    <string name="errordatabase_not_exporting">Error in Database Exporting</string>
    <string name="new_update_available">New Update Available</string>
    <string name="download_data">Downloading Data</string>
    <string name="entry_menu">Entry Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_menu_activity_name">RB GT Mer.</string>
    <string name="want_download_data">Do you want to Download Data?</string>
    <string name="want_upload_data">Do you want to Upload Data?</string>
    <string name="no_data_for_upload">No Data For Upload</string>
    <string name="title_store_list_download_data">Please Download Data First</string>
    <string name="nonetwork"> No Network Connection. Please Check Your Internet Connection</string>
    <string name="menu_daily_route_plan">Daily Route Plan</string>
    <string name="menu_daily_download">Download Data</string>
    <string name="menu_upload_data">Upload Data</string>
    <string name="menu_geotag">Geo Tag</string>
    <string name="menu_exit">Exit</string>
    <string name="store_search">Lookup Route Plan</string>
    <string name="menu_services">Services</string>
    <string name="action_settings">Settings</string>
    <string name="previous_data_upload">Please Upload Previous Data First</string>
    <string name="NodataAvailable">No data available</string>
    <string name="Pleasedownaloaddata">Please download data</string>
    <string name="gps">GPS IS DISABLED...</string>
    <string name="gpsebale">Click ok to enable GPS.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="uploaddata">Uploading Data</string>
    <string name="dialog_title">Parinaam</string>
    <string name="notsuppoted">This device is not supported.</string>
    <string name="storefront">Click Store Front Image</string>
    <string name="save">Save</string>
    <string name="title_activity_save_data">Do you want to save the data</string>
    <string name="clickimage">Please click the image</string>
    <string name="title_activity_window">Window/Asset</string>
    <string name="export_database">Export Database</string>
    <string name="Areyou_sure_take_backup"> Are you sure you want to take the backup of your data</string>
    <string name="backup">Backup</string>
    <string name="title_store_list_activity_store_already_done">Store Already Uploaded</string>
    <string name="title_store_list_activity_store_data_uploaded">Store Data Uploaded</string>
    <string name="title_store_list_activity_store_already_checkout">Store Already Checkout</string>
    <string name="title_store_list_activity_store_again_uploaded">Partial Data Uploaded , Please upload data again</string>
    <string name="title_store_list_activity_store_closed">Store Closed</string>
    <string name="title_store_list_activity_already_store_closed">Store Already Closed</string>
    <string name="title_store_list_checkout_Already_filled">Data already filled</string>
    <string name="title_store_list_checkout_current">Please checkout from current store</string>
    <string name="wantcheckout">Are you sure you want to Checkout</string>
    <string name="closed">Close</string>
    <string name="first_geotag_the_store">First geotag the store</string>
    <string name="DELETE_ALERT_MESSAGE">Saved data will be lost - Do you want to continue?</string>
    <string name="title_activity_non_working">NonWorkingActivity</string>
    <string name="title_activity_category_dressing">Category Execution</string>
    <string name="datanotfound">Data not found in</string>
    <string name="blank"></string>
    <string name="distance_from_the_store">Distance from Store</string>
    <string name="title_activity_geo_tag_store_list">GeoTagStoreList</string>
    <string name="title_geo_tag_activity_geo_already_done">Store Already Geotagged</string>
    <string name="title_activity_geo_tagging">GeoTaggingActivity</string>
    <string name="takeimage"> Please Take Image</string>
    <string name="failure">failure</string>
    <string name="select_reason">Select Reason</string>
    <string name="please_select_reason">Please Select Reason</string>
    <string name="data_not_uploaded">Data not uploaded. Please try again.</string>
    <string name="data_uploaded">Database Uploaded Successfully</string>
    <string name="title_activity_dbsrcategory">DBSR Category</string>
    <string name="title_activity_window_checklist">Window Checklist</string>
    <string name="title_activity_window_menu">Window Execution</string>
    <string name="camera_not_found">Camera Not found</string>
    <string name="you_need_to_be_in_the_store">You need to be in the store to Checkin/Checkout</string>
    <string name="title_activity_store_profile">StoreProfileActivity</string>
    <string name="meters">meters</string>
</resources>
